config-root/namespaces/myapps/nodey554/nodey554-nodey554-deploy.yaml
# Source: nodey554/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodey554-nodey554
  labels:
    draft: draft-app
    chart: "nodey554-1.0.45"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: myapps
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: nodey554-nodey554
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: nodey554-nodey554
    spec:
      serviceAccountName: nodey554-nodey554
      containers:
        - name: nodey554
          image: "gcr.io/jenkins-x-labs-bdd1/nodey554:1.0.45"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
        - name: "tekton-container-registry-auth"
