config-root/namespaces/myapps/nodey554/nodey554-svc.yaml
# Source: nodey554/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodey554
  labels:
    chart: "nodey554-1.0.42"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
  namespace: myapps
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: nodey554-nodey554
