config-root/namespaces/myapps/nodey554/nodey554-ingress.yaml
# Source: nodey554/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: nodey554
  namespace: myapps
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: nodey554
              servicePort: 80
      host: nodey554-myapps.34.118.108.125.nip.io
